2016-11-29  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted: Completion/Zsh/Context/_subscript: Complete the
	$foo[(f)] flag.

	* unposted: Completion/Unix/Command/_git: _git-config: Fix
	user.email completion to complete only bare email addresses.

2016-11-28  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 40011: Completion/Base/Core/_main_complete,
	Completion/Solaris/Command/_pfexec,
	Completion/Solaris/Command/_zlogin,
	Completion/Unix/Command/_chown, Completion/Unix/Command/_doas,
	Completion/Unix/Command/_sudo: Make $_comp_priv_prefix only
	declared when required, and use that to have chgrp offer all
	groups under doas, ssh, etc as well.

	* 40010: Src/builtin.c, Test/A02alias.ztst: builtins: Say
	'bad option: +x', not 'bad option: -x', when +x was passed.

	* 40009: Src/hashtable.c: alias -L: Emit aliases that begin
	with a plus sign correctly.

2016-11-24  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* 40013: Completion/Unix/Type/_date_formats,
	Completion/Zsh/Command/_strftime: process zsh-specific time
	format extensions correctly

2016-11-25  Oliver Kiddle  <opk@zsh.org>

	* unposted: Functions/Zle/surround: set new vichange flag

	* 40020: Completion/Unix/Command/_cscope: new completion

2016-11-25  Laurent Arnoud  <laurent@spkdev.net>

	* 40018 + 40019: Completion/Debian/Command/_apt: Add missing
	commands to Debian apt completion

2016-11-24  Oliver Kiddle  <opk@zsh.org>

	* unposted: Completion/Unix/Command/_date: fix typo (=+ to +=)

	* 40004 (tweaked): Completion/Redhat/Command/_yum: fix cache
	mechanism, complete groups and other minor improvements

	* unposted: Src/Zle/zle_params.c: fix to compile on Solaris where
	curses.h has a #define for reg to register

	* 40003: Src/Zle/zle_params.c, Doc/Zsh/zle.yo: include "0-"9
	vi buffers in the registers associative array

2016-11-24  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* 40005: Completion/Unix/Command/_date,
	Completion/Unix/Type/_date_formats: call _date_formats from _date.