@@ -1,3 +1,9 @@
+2016-11-29  Peter Stephenson  <p.stephenson@samsung.com>
+
+	* 40026: Src/Zle/zle_tricky.c: More care with redirection
+	completion.  Fixes for completion after > in "!> ." that
+	should add to sanity.
+
 2016-11-29  Daniel Shahaf  <d.s@daniel.shahaf.name>
 
 	* unposted: Completion/Zsh/Context/_subscript: Complete the
